@@ -1,5 +1,8 @@
 2005-01-30  Per Bothner  <per@bothner.com>
 
+	* ModuleExp.java (evalModule): Extract value if decl IS_CONSTANT.
+	Fixes Savannah bug #11791.
+
 	* Compilation.java (compile): Wrap Throwable if needed. Print messages.
 	(addClass): Don' catch exceptions and exit here.  Handle later.
 
